--- a/about/index.html
+++ b/about/index.html
@@ -48,13 +48,13 @@
     
   
 
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Computational Clinical Science">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="alternate" href="https://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="feed" href="https://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="/about/">
+  <link rel="canonical" href="https://haines-lab.com/about/">
 
   
 
@@ -193,35 +193,35 @@
   <ul class="share">
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=%2fabout%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fhaines-lab.com%2fabout%2f"
          target="_blank">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=About%20Me&amp;url=%2fabout%2f"
+         href="https://twitter.com/intent/tweet?text=About%20Me&amp;url=https%3a%2f%2fhaines-lab.com%2fabout%2f"
          target="_blank">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fabout%2f&amp;title=About%20Me"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fhaines-lab.com%2fabout%2f&amp;title=About%20Me"
          target="_blank">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fabout%2f&amp;title=About%20Me"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fhaines-lab.com%2fabout%2f&amp;title=About%20Me"
          target="_blank">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=About%20Me&amp;body=%2fabout%2f">
+         href="mailto:?subject=About%20Me&amp;body=https%3a%2f%2fhaines-lab.com%2fabout%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
