Updating website with most current posts

--- a/talk/index.html
+++ b/talk/index.html
@@ -43,13 +43,13 @@
     
   
 
-  <link rel="alternate" href="https://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Clinical Science">
-  <link rel="feed" href="https://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="alternate" href="http://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="feed" href="http://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Clinical Science">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://haines-lab.com/talk/">
+  <link rel="canonical" href="http://haines-lab.com/talk/">
 
   
 
@@ -187,7 +187,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://haines-lab.com/talk/math_psych_2017/">
+<a class="btn btn-primary btn-outline btn-xs" href="http://haines-lab.com/talk/math_psych_2017/">
   Details
 </a>
 
@@ -220,7 +220,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://haines-lab.com/talk/cog_brown_1/">
+<a class="btn btn-primary btn-outline btn-xs" href="http://haines-lab.com/talk/cog_brown_1/">
   Details
 </a>
 
