--- a/publication/hbayesdm/index.html
+++ b/publication/hbayesdm/index.html
@@ -48,13 +48,13 @@
     
   
 
-  <link rel="alternate" href="https://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
-  <link rel="feed" href="https://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="alternate" href="http://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="feed" href="http://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://haines-lab.com/publication/hbayesdm/">
+  <link rel="canonical" href="http://haines-lab.com/publication/hbayesdm/">
 
   
 
@@ -187,35 +187,35 @@
   <ul class="share">
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f"
+         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f"
          target="_blank">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package&amp;url=https%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f"
+         href="https://twitter.com/intent/tweet?text=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package&amp;url=http%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f"
          target="_blank">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f&amp;title=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f&amp;title=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package"
          target="_blank">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f&amp;title=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package"
+         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f&amp;title=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package"
          target="_blank">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package&amp;body=https%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f">
+         href="mailto:?subject=Revealing%20Neurocomputational%20Mechanisms%20of%20Reinforcement%20Learning%20and%20Decision-Making%20With%20the%20hBayesDM%20Package&amp;body=http%3a%2f%2fhaines-lab.com%2fpublication%2fhbayesdm%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -305,7 +305,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://haines-lab.com/project/code/">
+<a class="btn btn-primary btn-outline" href="http://haines-lab.com/project/code/">
   Project
 </a>
 
