--- a/publication/index.html
+++ b/publication/index.html
@@ -43,13 +43,13 @@
     
   
 
-  <link rel="alternate" href="https://haines-lab.com/publication/index.xml" type="application/rss+xml" title="Computational Clinical Science">
-  <link rel="feed" href="https://haines-lab.com/publication/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="alternate" href="http://haines-lab.com/publication/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="feed" href="http://haines-lab.com/publication/index.xml" type="application/rss+xml" title="Computational Clinical Science">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://haines-lab.com/publication/">
+  <link rel="canonical" href="http://haines-lab.com/publication/">
 
   
 
@@ -215,7 +215,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://haines-lab.com/publication/hbayesdm/">
+<a class="btn btn-primary btn-outline btn-xs" href="http://haines-lab.com/publication/hbayesdm/">
   Details
 </a>
 
@@ -233,7 +233,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://haines-lab.com/project/code/">
+<a class="btn btn-primary btn-outline btn-xs" href="http://haines-lab.com/project/code/">
   Project
 </a>
 
