Updating website with most current posts

--- a/talk/cog_brown_1/index.html
+++ b/talk/cog_brown_1/index.html
@@ -48,8 +48,8 @@
     
   
 
-  <link rel="alternate" href="http://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
-  <link rel="feed" href="http://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Clinical Science">
+  <link rel="alternate" href="http://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Psych">
+  <link rel="feed" href="http://haines-lab.com/index.xml" type="application/rss+xml" title="Computational Psych">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -58,7 +58,7 @@
 
   
 
-  <title>A new reinforcement learning model of the Iowa Gambling Task | Computational Clinical Science</title>
+  <title>A new reinforcement learning model of the Iowa Gambling Task | Computational Psych</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
@@ -75,7 +75,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Computational Clinical Science</a>
+      <a class="navbar-brand" href="/">Computational Psych</a>
     </div>
 
     
