Updating website with most current posts

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <li>
             <i class="fa-li fa fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">M.A. in Psychology (expected date), 2017</p>
+              <p class="course">M.A. in Psychology, 2017</p>
               <p class="institution">The Ohio State University</p>
             </div>
           </li>
