Updating website with most current posts

--- a/404.html
+++ b/404.html
@@ -187,6 +187,14 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="http://haines-lab.com/publication/easyml/">Easyml: Easily Build And Evaluate Machine Learning Models</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://haines-lab.com/publication/minority_stress/">The Indirect Effect of Emotion Regulation on Minority Stress and Problematic Substance Use in Lesbian, Gay, and Bisexual Individuals</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://haines-lab.com/publication/hbayesdm/">Revealing Neurocomputational Mechanisms of Reinforcement Learning and Decision-Making With the hBayesDM Package</a></li>
   </ul>
   
