--- a/talk/cog_brown_1/index.html
+++ b/talk/cog_brown_1/index.html
@@ -168,7 +168,7 @@
 
   
 <div class="article-header">
-  <img src="/img/IGT_1.pdf" class="article-banner" itemprop="image">
+  <img src="/img/IGT_1.png" class="article-banner" itemprop="image">
   
 </div>
 
