--- a/talk/math_psych_2017/index.html
+++ b/talk/math_psych_2017/index.html
@@ -168,7 +168,7 @@
 
   
 <div class="article-header">
-  <img src="/img/regret_1.pdf" class="article-banner" itemprop="image">
+  <img src="/img/regret_1.png" class="article-banner" itemprop="image">
   
 </div>
 
