Updating website with most current posts

--- a/talk/index.html
+++ b/talk/index.html
@@ -162,7 +162,7 @@
 
 
 <div class="article-header">
-  <img src="/img/IGT_pres_2.jpg" class="article-banner" itemprop="image">
+  <img src="/img/IGT_pres_2.png" class="article-banner" itemprop="image">
   <span class="article-header-caption">Presentation at Ohio State&rsquo;s Cognitive Brownbag</span>
 </div>
 
