Updating website with most current posts

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
       <div class="pub-abstract" itemprop="text">
         
-        The easyml (easy machine learning) package lowers the barrier to entry to machine learning and is ideal for undergraduate/graduate students, and practitioners who want to quickly apply machine learning algorithms to their research without having to worry about the best practices of implementing each algorithm. The package provides standardized recipes for regression and classification algorithms in R and Python and implements them in a functional, modular, and extensible framework. This package currently implements recipes for several common machine learning algorithms (e.g., penalized linear models, random forests, and support vector machines) and provides a unified interface to each one. Importantly, users can run and evaluate each machine learning algorithm with a single line of coding. Each recipe is robust, implements best practices specific to each algorithm, and generates a report with details about the model, its performance, as well as journal-quality visualizations. The package&rsquo;s functional, modular, and extensible framework also allows researchers and more advanced users to easily implement new recipes for other algorithms.
+        Machine learning is becoming more widely accepted across a broad range of scientific disciplines. The easyml (easy machine learning) package lowers the barrier to entry to machine learning, allowing users to apply best-practice regression and classification schemes to their own data.
         
       </div>
 
