--- a/publication/hbayesdm/index.html
+++ b/publication/hbayesdm/index.html
@@ -168,7 +168,7 @@
 
   
 <div class="article-header">
-  <img src="/img/hBayesDM.pdf" class="article-banner" itemprop="image">
+  <img src="/img/hBayesDM.png" class="article-banner" itemprop="image">
   
 </div>
 
