--- a/publication/minority_stress/index.html
+++ b/publication/minority_stress/index.html
@@ -168,7 +168,7 @@
 
   
 <div class="article-header">
-  <img src="/img/minority_stress.jpeg" class="article-banner" itemprop="image">
+  <img src="/img/minority_stress.png" class="article-banner" itemprop="image">
   
 </div>
 
