Updating website with most current posts

--- a/index.html
+++ b/index.html
@@ -995,12 +995,11 @@ Figure 1 The idea is simple, and it’s something that we experience quite often
   <div class="col-xs-12 col-md-8">
     
 
-<h1 id="list-your-workshops">List your workshops.</h1>
+<h1 id="workshops">Workshops</h1>
 
-<p>[workshops]
-  workshops = [
-    <a href="https://github.com/CCS-Lab/APS2017-workshop" target="_blank">A tutorial on hBayesDM at the Association for Psychological Science (2017)</a>
-  ]</p>
+<ul>
+<li><a href="https://github.com/CCS-Lab/APS2017-workshop" target="_blank">A tutorial on hBayesDM at the Association for Psychological Science (2017)</a></li>
+</ul>
 
   </div>
 </div>
