--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
     <div class="col-md-12">
       <a href="http://haines-lab.com/publication/minority_stress/">
-        <img src="/img/minority_stress.jpeg" class="pub-banner"
+        <img src="/img/minority_stress.png" class="pub-banner"
              itemprop="image">
       </a>
     </div>
@@ -450,7 +450,7 @@
 
     <div class="col-md-12">
       <a href="http://haines-lab.com/publication/hbayesdm/">
-        <img src="/img/hBayesDM.pdf" class="pub-banner"
+        <img src="/img/hBayesDM.png" class="pub-banner"
              itemprop="image">
       </a>
     </div>
