Updating website with most current posts

--- a/publication/haines_cog_sci_2018/index.html
+++ b/publication/haines_cog_sci_2018/index.html
@@ -292,7 +292,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://haines-lab.com/haines-lab.com/pdf/Haines_Cog_Sci_2018.pdf">
+<a class="btn btn-primary btn-outline" href="http://haines-lab.com/pdf/Haines_Cog_Sci_2018.pdf">
   PDF
 </a>
 
