--- a/talk/index.html
+++ b/talk/index.html
@@ -43,8 +43,8 @@
     
   
 
-  <link rel="alternate" href="http://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Psych">
-  <link rel="feed" href="http://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Psych">
+  <link rel="alternate" href="http://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Psychology">
+  <link rel="feed" href="http://haines-lab.com/talk/index.xml" type="application/rss+xml" title="Computational Psychology">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -53,7 +53,7 @@
 
   
 
-  <title>Recent &amp; Upcoming Talks | Computational Psych</title>
+  <title>Recent &amp; Upcoming Talks | Computational Psychology</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
@@ -70,7 +70,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Computational Psych</a>
+      <a class="navbar-brand" href="/">Computational Psychology</a>
     </div>
 
     
