Updating website with most current posts

--- a/404.html
+++ b/404.html
@@ -191,6 +191,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="http://haines-lab.com/publication/haines_plos_one_2019/">Using computer-vision and machine learning to automate facial coding of positive and negative affect intensity</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://haines-lab.com/publication/haines_cog_sci_2018/">The Outcome‐Representation Learning Model: A Novel Reinforcement Learning Model of the Iowa Gambling Task</a></li>
   </ul>
   
