--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -177,6 +177,13 @@
   
   
   <div>
+    <h2><a href="http://haines-lab.com/publication/haines_plos_one_2019/">Using computer-vision and machine learning to automate facial coding of positive and negative affect intensity</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://haines-lab.com/publication/haines_cog_sci_2018/">The Outcome‐Representation Learning Model: A Novel Reinforcement Learning Model of the Iowa Gambling Task</a></h2>
     <div class="article-style">
       
