Updating website with most current posts

--- a/404.html
+++ b/404.html
@@ -172,6 +172,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="http://haines-lab.com/post/on-the-equivalency-between-the-lasso-ridge-regression-and-specific-bayesian-priors/">On the equivalency between frequentist Ridge (and LASSO) regression and hierarchial Bayesian regression</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://haines-lab.com/post/2018-03-24-human-choice-and-reinforcement-learning-3/">Human Choice and Reinforcement Learning (3)</a></li>
   </ul>
   
