Updating website with most current posts

--- a/404.html
+++ b/404.html
@@ -203,6 +203,10 @@
   </ul>
   
   <ul>
+    <li><a href="http://haines-lab.com/publication/haines_dev_psych_2019/">Using automated computer vision and machine learning to code facial expressions of affect and arousal: Implications for emotion dysregulation research</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://haines-lab.com/publication/haines_cog_sci_2018/">The Outcome‐Representation Learning Model: A Novel Reinforcement Learning Model of the Iowa Gambling Task</a></li>
   </ul>
   
