--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -184,6 +184,13 @@
   </div>
   
   <div>
+    <h2><a href="http://haines-lab.com/publication/haines_dev_psych_2019/">Using automated computer vision and machine learning to code facial expressions of affect and arousal: Implications for emotion dysregulation research</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://haines-lab.com/publication/haines_cog_sci_2018/">The Outcome‐Representation Learning Model: A Novel Reinforcement Learning Model of the Iowa Gambling Task</a></h2>
     <div class="article-style">
       
