Updating website with most current posts

--- a/404.html
+++ b/404.html
@@ -199,11 +199,15 @@
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="http://haines-lab.com/publication/haines_plos_one_2019/">Using computer-vision and machine learning to automate facial coding of positive and negative affect intensity</a></li>
+    <li><a href="http://haines-lab.com/publication/romeu_haines_dad_2019/">A computational model of the Cambridge gambling task with applications to substance use disorders</a></li>
   </ul>
   
   <ul>
     <li><a href="http://haines-lab.com/publication/haines_dev_psych_2019/">Using automated computer vision and machine learning to code facial expressions of affect and arousal: Implications for emotion dysregulation research</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://haines-lab.com/publication/haines_plos_one_2019/">Using computer-vision and machine learning to automate facial coding of positive and negative affect intensity</a></li>
   </ul>
   
   <ul>
