Updating website with most current posts

--- a/404.html
+++ b/404.html
@@ -199,6 +199,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="http://haines-lab.com/publication/haines_cps_2020/">Anxiety Modulates Preference for Immediate Rewards among Trait-Impulsive Individuals: A Hierarchical Bayesian Analysis</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://haines-lab.com/publication/romeu_haines_dad_2019/">A computational model of the Cambridge gambling task with applications to substance use disorders</a></li>
   </ul>
   
