--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -177,6 +177,13 @@
   
   
   <div>
+    <h2><a href="http://haines-lab.com/publication/haines_cps_2020/">Anxiety Modulates Preference for Immediate Rewards among Trait-Impulsive Individuals: A Hierarchical Bayesian Analysis</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://haines-lab.com/publication/romeu_haines_dad_2019/">A computational model of the Cambridge gambling task with applications to substance use disorders</a></h2>
     <div class="article-style">
       
