Updating website with most current posts

--- a/publication/haines_cps_2020/index.html
+++ b/publication/haines_cps_2020/index.html
@@ -178,7 +178,7 @@
     <h1 itemprop="name">Anxiety Modulates Preference for Immediate Rewards among Trait-Impulsive Individuals: A Hierarchical Bayesian Analysis</h1>
     <span class="pub-authors" itemprop="author">
       
-      R. Romeu, N. Haines, W.-Y. Ahn, J. Busemeyer, J. Vassileva
+      N. Haines, T.P. Beauchaine, M. Galdo, A.H. Rogers, H. Hahn, M.A. Pitt, J.I. Myung, B.M. Turner, W.-Y. Ahn
       
     </span>
     <span class="pull-right">
