--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
       <div class="pub-authors" itemprop="author">
         
-        R. Romeu, N. Haines, W.-Y. Ahn, J. Busemeyer, J. Vassileva
+        N. Haines, T.P. Beauchaine, M. Galdo, A.H. Rogers, H. Hahn, M.A. Pitt, J.I. Myung, B.M. Turner, W.-Y. Ahn
         
       </div>
 
