Updating website with most current posts

--- a/404.html
+++ b/404.html
@@ -172,6 +172,10 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="http://haines-lab.com/post/2020-06-13-on-curbing-your-measurement-error/">On Curbing Your Measurement Error: From Classical Corrections to Generative Models</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://haines-lab.com/post/thinking-generatively-why-do-we-use-atheoretical-statistical-models-to-test-substantive-psychological-theories/">Thinking generatively: Why do we use atheoretical statistical models to test substantive psychological theories?</a></li>
   </ul>
   
