--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         
         
         <li>
-          <a itemprop="sameAs" href="/pdf/CV_Nathaniel_Haines.pdf" target="_blank">
+          <a itemprop="sameAs" href="#pdf/CV_Nathaniel_Haines.pdf" target="_blank">
             <i class="ai ai-CV big-icon"></i>
           </a>
         </li>
