--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         
 
         <li class="nav-item">
-          <a href="/pdf/cv_nathaniel_haines.pdf" data-target="/pdf/cv_nathaniel_haines.pdf">
+          <a href="/pdf/CV_Nathaniel_Haines" data-target="pdf/CV_Nathaniel_Haines">
             
             <span>CV</span>
           </a>
