Updating website with most current posts

--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -189,6 +189,13 @@
   
   
   <div>
+    <h2><a href="http://haines-lab.com/publication/haines_psychopathology_2020/">Moving beyond Ordinary Factor Analysis in Studies of Personality and Personality Disorder: A Computational Modeling Perspective</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://haines-lab.com/publication/haines_cps_2020/">Anxiety Modulates Preference for Immediate Rewards among Trait-Impulsive Individuals: A Hierarchical Bayesian Analysis</a></h2>
     <div class="article-style">
       
