--- a/404.html
+++ b/404.html
@@ -219,6 +219,10 @@
   <h2>Recent Publications</h2>
   
   <ul>
+    <li><a href="http://haines-lab.com/publication/haines_psychopathology_2020/">Moving beyond Ordinary Factor Analysis in Studies of Personality and Personality Disorder: A Computational Modeling Perspective</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://haines-lab.com/publication/haines_cps_2020/">Anxiety Modulates Preference for Immediate Rewards among Trait-Impulsive Individuals: A Hierarchical Bayesian Analysis</a></li>
   </ul>
   
