Updating website with most current posts

--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
     
     <a href="/post/bayesian-design-optimization-an-application-to-item-reduction-in-scale-development-research/"  class="summary-link">
       <div class="article-style">
-          Coming Soon!  
+        Goals Survey-based measures are used throughout the social, behavioral, and health sciences–but how are they developed? And how do we know they measure the constructs they are meant to measure?
       </div>
     </a>
     
@@ -1652,7 +1652,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    1 min read
+    33 min read
   </span>
   
 
